--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -745,7 +745,11 @@ html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .br
       <h1 data-w-id="a0a2afc2-1509-681a-b464-35f50d79df27" style="opacity:0" class="about-us-banner-title">حيث تلتقي الرياضة بالتحفيز وروح المجتمع لإلهام التميز.
 
         </h1>
-      <p data-w-id="8c10a2b4-6834-9956-4e2a-b00c89afd591" style="opacity:0" class="paragraph-large about-us-banner-paragraph">وكالة سبروتس فيجيني واحدة من بين 19 وكالة رياضية معتمدة من الاتحاد الدولي لكرة القدم (FIFA) في المملكة، مما يجعلنا رسميًا إحدى الوكالات المعترف بها عالميًا.</p><img src="images/Union-1.png" loading="lazy" style="opacity:0" data-w-id="7907ebf1-59fa-3a2d-58ae-53fee6fd7539" alt="" class="about-us-decorative-rectangle">
+      <p data-w-id="8c10a2b4-6834-9956-4e2a-b00c89afd591" style="opacity:0" class="paragraph-large about-us-banner-paragraph" >وكالة   
+        Sports Vision
+        نحن من بين 19 وكالة رياضية في المملكة معتمدة رسميًا من الاتحاد الدولي لكرة القدم (FIFA)،
+        ضمن نخبة الوكالات المعترف بها عالميًا في تمثيل وإدارة اللاعبين باحتراف.
+        </p><img src="images/Union-1.png" loading="lazy" style="opacity:0" data-w-id="7907ebf1-59fa-3a2d-58ae-53fee6fd7539" alt="" class="about-us-decorative-rectangle">
       <div data-w-id="d19ef250-a979-21ae-c496-41b1c7b8ff62" style="opacity:0" class="banner-buttons-wrapper">
         <a href="contact-us-rtl.html" class="primary-button w-button">تواصل معنا</a>
       </div>
@@ -753,64 +757,7 @@ html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .br
   </section>
 
   <!-- Services Carousel Section -->
-  <section class="services-carousel-section">
-    <div class="carousel-container">
-      <h2 class="carousel-title">خدماتنا الرياضية</h2>
-      <p class="carousel-subtitle">نقدم مجموعة شاملة من الخدمات الرياضية المتخصصة</p>
-      
-      <div class="void" id="void">
-        <div class="crop">
-          <ul id="card-list" style="--count: 5;">
-            <li>
-              <div class="card">
-                <a href="">
-                  <span class="service-name">تنظيم معسكرات رياضية</span>
-                  <span class="service-description">تنظيم معسكرات تدريبية احترافية للاعبين في بيئات مميزة تشمل التدريب الفني والبدني.</span>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <a href="">
-                  <span class="service-name">تنظيم دورات وفعاليات رياضية</span>
-                  <span class="service-description">توفير برامج تدريبية للاعبين الناشئين والمحترفين مع أفضل المدربين والخبراء.</span>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <a href="">
-                  <span class="service-name">تنظيم البطولات الرياضية</span>
-                  <span class="service-description">تصميم وإدارة البطولات الرياضية التنافسية على مستوى النادي والفرد.</span>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <a href="">
-                  <span class="service-name">تقديم دورات متخصصة في الرياضة والادارة الرياضية</span>
-                  <span class="service-description">برامج تدريبية لإدارة الرياضة وتحسين الأداء وتطوير اللاعبين.</span>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="card">
-                <a href="">
-                  <span class="service-name">إنتاج المحتوى الرياضي والتعليم الرياضي</span>
-                  <span class="service-description">توفير محتوى تعليمي وتحليلي حول الرياضة وإدارة المسار المهني.</span>
-                </a>
-              </div>
-            </li>
-          </ul>
-          <div class="last-circle"></div>
-          <div class="second-circle"></div>
-        </div>
-        <div class="mask"></div>
-        <div class="center-circle">خدماتنا</div>
-      </div>
-    </div>
-  </section>
-
+ 
   
   
 
@@ -1147,24 +1094,7 @@ html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .br
 
           </div>
 </section>
-  <section class="form-section">
-    <div data-w-id="f6481d1c-d23d-6785-7124-2b4da538988a" style="opacity:0" class="w-layout-blockcontainer base-container w-container">
-      <div class="form-wrapper">
-        <div class="brand-color-form-block w-form">
-          <h2 data-w-id="f6481d1c-d23d-6785-7124-2b4da538988e" style="opacity:0" class="h2-black">اشترك في النشرة الإخبارية لدينا لتكون على اتصال بأحدث الأخبار.</h2>
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="subscription-form" data-wf-page-id="683300b2c0b29cfacfe2eca5" data-wf-element-id="f6481d1c-d23d-6785-7124-2b4da538988d">
-            <div data-w-id="f6481d1c-d23d-6785-7124-2b4da5389890" style="opacity:0" class="e-mail-form"><input class="form-text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Your email" type="email" id="Email" required=""><input type="submit" data-wait="Please wait..." class="primary-button-black full-width-button w-button" value="اشترك لان"></div>
-          </form>
-          <div class="brand-color-form-success-message w-form-done">
-            <div class="success-text-block">Thank you! Your submission has been received!</div>
-          </div>
-          <div class="brand-color-form-error-message w-form-fail">
-            <div>Oops! Something went wrong while submitting the form.</div>
-          </div>
-        </div><img src="images/Union.png" loading="lazy" alt="" class="form-image">
-      </div>
-    </div>
-  </section>
+
   <div class="footer rtl">
     <div class="base-container w-container">
       <div class="footer-wrapper">
