--- a/contact-us-rtl.html
+++ b/contact-us-rtl.html
@@ -667,7 +667,7 @@ html body .navbar-absolute.about-us-navbar.w-nav[data-animation="over-left"] .br
           <h2 data-w-id="d69047ba-b71d-6992-7f6d-f1674c6f5e52" style="opacity:0">دعنا نتواصل<span class="brand-color-span">.</span></h2>
           <p data-w-id="631a008a-6c96-6e72-54ca-0e7fe71bac26" style="opacity:0">هل لديك أي أسئلة أو اقتراحات؟ لا تتردد في الكتابة إلينا. هل تريد شراء تذاكر للمباريات أو الانضمام إلى فريق؟ تواصل معنا وسنخبرك بكل سرور عن النادي الرياضي الخاص بنا.</p>
           <div data-w-id="c10531ca-9648-0386-3a8c-90509574679c" style="opacity:0" class="follow-on-wrapper">
-            <p class="uppercase-paragraph">تابعنا</p>
+            <p class="uppercase-paragraph-rtl">تابعنا</p>
             <div class="players-social-media-wrapper">
               <a href="https://www.instagram.com/" target="_blank" class="player-social-media-icon instagram-icon w-inline-block"></a>
               <a href="https://www.youtube.com/" target="_blank" class="player-social-media-icon youtube-icon w-inline-block"></a>
