--- a/home-1-rtl.html
+++ b/home-1-rtl.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 25 2025 22:16:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68330e0292b6ed77ecbac306" data-wf-site="6822c54974afef131c86bfa5" lang="en">
 <head>
@@ -700,7 +699,7 @@
               <div>1</div>
             </div>
             <h6 data-w-id="00b37ec3-67bb-daa8-f71d-7d04a0532fda" style="opacity:0" class="h6-white">مقدمة</h6>
-            <p id="w-node-_00b37ec3-67bb-daa8-f71d-7d04a0532fdc-ecbac306" data-w-id="00b37ec3-67bb-daa8-f71d-7d04a0532fdc" style="opacity:0" class="uppercase-paragraph">من نحن </p>
+            <p id="w-node-_00b37ec3-67bb-daa8-f71d-7d04a0532fdc-ecbac306" data-w-id="00b37ec3-67bb-daa8-f71d-7d04a0532fdc" style="opacity:0" class="uppercase-paragraph-rtl">من نحن </p>
             <div class="rectangle left"></div>
             <div class="rectangle right-top"></div>
           </div>
@@ -710,7 +709,7 @@
               <div>2</div>
             </div>
             <h6 data-w-id="4d6f7a78-4eee-a069-e2a3-6d19fbf69aec" style="opacity:0" class="h6-white">عقلية الفوز</h6>
-            <p data-w-id="4d6f7a78-4eee-a069-e2a3-6d19fbf69aee" style="opacity:0" class="uppercase-paragraph">كيف نفعلها</p>
+            <p data-w-id="4d6f7a78-4eee-a069-e2a3-6d19fbf69aee" style="opacity:0" class="uppercase-paragraph-rtl">كيف نفعلها</p>
             <div class="rectangle right-top"></div>
           </div>
           <div id="w-node-_0c4e8d2e-4092-c46f-eaf9-a340c9107a0e-ecbac306" class="text-cell-wrapper">
@@ -720,7 +719,7 @@
             <div class="rectangle left"></div>
             <div class="rectangle right-top"></div>
             <h6 data-w-id="0c4e8d2e-4092-c46f-eaf9-a340c9107a14" style="opacity:0" class="h6-white">العمل الجاد</h6>
-            <p data-w-id="0c4e8d2e-4092-c46f-eaf9-a340c9107a16" style="opacity:0" class="uppercase-paragraph">عقلية الفريق</p>
+            <p data-w-id="0c4e8d2e-4092-c46f-eaf9-a340c9107a16" style="opacity:0" class="uppercase-paragraph-rtl">عقلية الفريق</p>
           </div>
         </div>
       </div>
@@ -756,7 +755,7 @@
             <div class="rectangle left-bottom"></div>
             <div class="rectangle left"></div>
             <h6 data-w-id="00e830c6-fb0a-e2f1-35e8-fe339dabd847" style="opacity:0" class="h6-white">العزيمة</h6>
-            <p id="w-node-_00e830c6-fb0a-e2f1-35e8-fe339dabd849-ecbac306" data-w-id="00e830c6-fb0a-e2f1-35e8-fe339dabd849" style="opacity:0" class="uppercase-paragraph">لماذا نفعلها</p>
+            <p id="w-node-_00e830c6-fb0a-e2f1-35e8-fe339dabd849-ecbac306" data-w-id="00e830c6-fb0a-e2f1-35e8-fe339dabd849" style="opacity:0" class="uppercase-paragraph-rtl">لماذا نفعلها</p>
           </div>
           <div id="w-node-ab4a5682-3300-1920-22cd-f5c43a5cbd8e-ecbac306" class="text-cell-wrapper">
             <div class="rectangle right-top"></div>
@@ -764,7 +763,7 @@
               <div>5</div>
             </div>
             <h6 data-w-id="ab4a5682-3300-1920-22cd-f5c43a5cbd93" style="opacity:0" class="h6-white">إرادة غير قابلة للكسر</h6>
-            <p id="w-node-ab4a5682-3300-1920-22cd-f5c43a5cbd95-ecbac306" data-w-id="ab4a5682-3300-1920-22cd-f5c43a5cbd95" style="opacity:0" class="uppercase-paragraph">القوة في الأعداد</p>
+            <p id="w-node-ab4a5682-3300-1920-22cd-f5c43a5cbd95-ecbac306" data-w-id="ab4a5682-3300-1920-22cd-f5c43a5cbd95" style="opacity:0" class="uppercase-paragraph-rtl">القوة في الأعداد</p>
             <div class="rectangle left-bottom"></div>
             <div class="rectangle left"></div>
           </div>
@@ -776,7 +775,7 @@
               <div>6</div>
             </div>
             <h6 data-w-id="d3df8cd0-3eaa-516b-0b5e-62ea0f144537" style="opacity:0" class="h6-white">العمل بذكاء</h6>
-            <p id="w-node-d3df8cd0-3eaa-516b-0b5e-62ea0f144539-ecbac306" data-w-id="d3df8cd0-3eaa-516b-0b5e-62ea0f144539" style="opacity:0" class="uppercase-paragraph">فلسفتنا</p>
+            <p id="w-node-d3df8cd0-3eaa-516b-0b5e-62ea0f144539-ecbac306" data-w-id="d3df8cd0-3eaa-516b-0b5e-62ea0f144539" style="opacity:0" class="uppercase-paragraph-rtl">فلسفتنا</p>
             <div class="rectangle left-bottom"></div>
           </div>
         </div>
